2011-09-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-0 -- to be released for R 2.14.0

2011-09-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsCMatrix.R (solve.dsC.mat): new utility which calls lu() if
	CHOLMOD'S Cholesky() errors (when matrix is not pos.def.).

2011-09-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/bandSparse.R (bandSparse): and
	* R/sparseMatrix.R (sparseMatrix): add 'giveCsparse = TRUE'
	argument and allow returning Tsparse*, useful e.g. when used in
	bdiag().

2011-08-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: export diagN2U() & diagU2N(). They were "missing" for
	at least one user (GG).
	* man/diagU2N.Rd: docu + example.

	* DESCRIPTION (Version): 0.9996875-4 (*not* yet released)

2011-08-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.9996875-3, for CRAN

2011-08-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseVector.R (head): method; used in a few cases, eliminating
	two FIXMEs.

	* DESCRIPTION (Version): 0.9996875-1

	* R/ngTMatrix.R: stop() instead of warning() when NA's are coerced.
	* R/Csparse.R, R/Tsparse.R
	* src/t_Csparse_subassign.c, src/Csparse.c: <Csparse>[..] <- val
	now works via .Call(*Csparse_subassign, ...) and no longer suffers
	from unnecessary memory-blowup.

2011-07-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgTMatrix.R (image): add 'useRaster = FALSE' argument,
	providing the possibility of using raster (instead of rectangle
	drawing vector) images.

2011-07-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nearPD.R: allow 'ensureSymmetry' argument for speedup.

2011-06-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (Cspdiagprod, diagCspprod): fixup for symmetric
	sparse, and non constant-diagonal.

2011-05-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsCMatrix.R (determinant(<dsCMatrix>): fix for Matrix(0, 1) case.
