@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.0-0
-Date: 2011-09-27
+Version: 1.0-1
+Date: 2011-..-..
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
